add dot in home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	Thise is home page.
+	Thise is home page..
 	<br>
 	{{greeting}}
 	<form action="http://127.0.0.1:8000" method="GET" enctype="multipart/form-data">
