added counter of words

--- a/templates/reversed.html
+++ b/templates/reversed.html
@@ -4,5 +4,6 @@
 <h1>Reversed text</h1>
 {{reversedtext}}
 <br>
-<p>Количество букв: </p> {{lenth}}
-fetch 123 123213133
+<p>Количество букв: {{lenth}}</p>
+<br>
+<p>Количество слов: {{words}}</p>
