commiting from PyCharm

--- a/templates/reversed.html
+++ b/templates/reversed.html
@@ -7,3 +7,5 @@
 <p>Количество букв: {{lenth}}</p>
 <br>
 <p>Количество слов: {{words}}</p>
+<br>
+<p>Процентное соотношение ниггерства в Димоне: 9532%</p>
